--- a/02.HTML-Structure-Exercise-Resouces/L2_10_Clean-up-Wiki-Bulgaria/source-file.html
+++ b/02.HTML-Structure-Exercise-Resouces/L2_10_Clean-up-Wiki-Bulgaria/source-file.html
@@ -26,22 +26,14 @@
 	<a href="https://en.wikipedia.org/wiki/Bulgaria_(disambiguation)">Bulgaria (disambiguation)</a>.
 	country in Southeast Europe
 	<p>
-		<span style="font-size: small;"><span id="coordinates"><a
-					href="https://en.wikipedia.org/wiki/Geographic_coordinate_system"
-					title="Geographic coordinate system">Coordinates</a>: <span class="plainlinks nourlexpansion"><span
-						style="white-space: nowrap;"><img src="./Bulgaria - Wikipedia_files/17px-WMA_button2b.png"
-							srcset="//upload.wikimedia.org/wikipedia/commons/thumb/5/55/WMA_button2b.png/17px-WMA_button2b.png 1x, //upload.wikimedia.org/wikipedia/commons/thumb/5/55/WMA_button2b.png/34px-WMA_button2b.png 2x"
-							class="wmamapbutton noprint" title="Show location on an interactive map" alt=""
-							style="padding: 0px 3px 0px 0px; cursor: pointer;"><a class="external text"
-							href="https://tools.wmflabs.org/geohack/geohack.php?pagename=Bulgaria&amp;params=42_45_N_25_30_E_type:country_scale:2000000"
-							style="white-space: nowrap;"><span class="geo-default"><span class="geo-dms"
-									title="Maps, aerial photos, and other data for this location"><span
-										class="latitude">42°45′N</span> <span class="longitude">25°30′E</span></span></span><span
-								class="geo-multi-punct">﻿
-								/ ﻿</span><span class="geo-nondefault"><span class="geo-dec"
-									title="Maps, aerial photos, and other data for this location">42.750°N
-									25.500°E</span><span style="display:none">﻿ / <span class="geo">42.750;
-										25.500</span></span></span></a></span></span></span></span>
+		<a href="https://en.wikipedia.org/wiki/Geographic_coordinate_system">Coordinates</a>:
+		<a
+			href="https://tools.wmflabs.org/geohack/geohack.php?pagename=Bulgaria&amp;params=42_45_N_25_30_E_type:country_scale:2000000">
+			42°45′N
+			25°30′E
+			/42.750°N
+			25.500°E/42.750;25.500
+		</a>
 	</p>
 	<table class="infobox geography vcard" style="width:22em;font-size:88%;">
 		<tbody>
