next paragraph - done

--- a/02.HTML-Structure-Exercise-Resouces/L2_10_Clean-up-Wiki-Bulgaria/source-file.html
+++ b/02.HTML-Structure-Exercise-Resouces/L2_10_Clean-up-Wiki-Bulgaria/source-file.html
@@ -66,32 +66,39 @@
 		square kilometres (42,855&nbsp;sq&nbsp;mi), Bulgaria is Europe's
 		<a href="https://en.wikipedia.org/wiki/List_of_European_countries_by_area">16th-largest country</a>.
 	</p>
-	<p>One of the earliest societies in the lands of modern-day Bulgaria was the <a
-			href="https://en.wikipedia.org/wiki/Neolithic" title="Neolithic">Neolithic</a> <a
-			href="https://en.wikipedia.org/wiki/Karanovo_culture" title="Karanovo culture">Karanovo
+	<p>
+		One of the earliest societies in the lands of modern-day Bulgaria was the
+		<a href="https://en.wikipedia.org/wiki/Neolithic">Neolithic</a>
+		<a href="https://en.wikipedia.org/wiki/Karanovo_culture">Karanovo
 			culture</a>, which dates back to 6,500 BC. In the 6th to 3rd century BC the region was a
-		battleground for <a href="https://en.wikipedia.org/wiki/Thracians" title="Thracians">Thracians</a>, <a
-			href="https://en.wikipedia.org/wiki/Persians" class="mw-redirect" title="Persians">Persians</a>, <a
-			href="https://en.wikipedia.org/wiki/Celts" title="Celts">Celts</a> and <a
-			href="https://en.wikipedia.org/wiki/Ancient_Macedonians" title="Ancient Macedonians">ancient
-			Macedonians</a>; stability came when the <a href="https://en.wikipedia.org/wiki/Roman_Empire"
-			title="Roman Empire">Roman Empire</a> conquered the region in AD 45. The Eastern Roman, or
-		Byzantine, Empire lost some of these territories to an invading <a href="https://en.wikipedia.org/wiki/Bulgars"
-			title="Bulgars">Bulgar</a> horde in the late 7th
-		century. The Bulgars founded the <a href="https://en.wikipedia.org/wiki/First_Bulgarian_Empire"
-			title="First Bulgarian Empire">First Bulgarian Empire</a> in AD 681, which dominated most of the <a
-			href="https://en.wikipedia.org/wiki/Balkans" title="Balkans">Balkans</a> and significantly
-		influenced <a href="https://en.wikipedia.org/wiki/Slavs" title="Slavs">Slavic</a> cultures by
-		developing the <a href="https://en.wikipedia.org/wiki/Cyrillic_script" title="Cyrillic script">Cyrillic
+		battleground for
+		<a href="https://en.wikipedia.org/wiki/Thracians">Thracians</a>,
+		<a href="https://en.wikipedia.org/wiki/Persians">Persians</a>,
+		<a href="https://en.wikipedia.org/wiki/Celts">Celts</a> and
+		<a href="https://en.wikipedia.org/wiki/Ancient_Macedonians">ancient
+			Macedonians</a>; stability came when the
+		<a href="https://en.wikipedia.org/wiki/Roman_Empire">Roman Empire</a> conquered the region in AD 45. The Eastern
+		Roman, or
+		Byzantine, Empire lost some of these territories to an invading
+		<a href="https://en.wikipedia.org/wiki/Bulgars">Bulgar</a> horde in the late 7th
+		century. The Bulgars founded the
+		<a href="https://en.wikipedia.org/wiki/First_Bulgarian_Empire">First Bulgarian Empire</a> in AD 681, which
+		dominated most of the
+		<a href="https://en.wikipedia.org/wiki/Balkans">Balkans</a> and significantly
+		influenced
+		<a href="https://en.wikipedia.org/wiki/Slavs">Slavic</a> cultures by
+		developing the
+		<a href="https://en.wikipedia.org/wiki/Cyrillic_script">Cyrillic
 			script</a>. This state lasted until the early 11th century, when
-		Byzantine emperor <a href="https://en.wikipedia.org/wiki/Basil_II" title="Basil II">Basil II</a>
-		conquered and dismantled it. A successful Bulgarian revolt in 1185 established a <a
-			href="https://en.wikipedia.org/wiki/Second_Bulgarian_Empire" title="Second Bulgarian Empire">Second
-			Bulgarian Empire</a>, which reached its apex under <a href="https://en.wikipedia.org/wiki/Ivan_Asen_II"
-			class="mw-redirect" title="Ivan Asen II">Ivan
+		Byzantine emperor
+		<a href="https://en.wikipedia.org/wiki/Basil_II">Basil II</a>
+		conquered and dismantled it. A successful Bulgarian revolt in 1185 established a
+		<a href="https://en.wikipedia.org/wiki/Second_Bulgarian_Empire">Second
+			Bulgarian Empire</a>, which reached its apex under
+		<a href="https://en.wikipedia.org/wiki/Ivan_Asen_II">Ivan
 			Asen II</a> (1218–1241). After numerous exhausting wars and feudal strife, the Second Bulgarian
-		Empire disintegrated in 1396 and its territories fell under <a href="https://en.wikipedia.org/wiki/Ottoman_Empire"
-			title="Ottoman Empire">Ottoman</a> rule for
+		Empire disintegrated in 1396 and its territories fell under
+		<a href="https://en.wikipedia.org/wiki/Ottoman_Empire">Ottoman</a> rule for
 		nearly five centuries.
 	</p>
 	<p>The <a href="https://en.wikipedia.org/wiki/Russo-Turkish_War_(1877%E2%80%9378)" class="mw-redirect"
