--- a/02.HTML-Structure-Exercise-Resouces/L2_10_Clean-up-Wiki-Bulgaria/source-file.html
+++ b/02.HTML-Structure-Exercise-Resouces/L2_10_Clean-up-Wiki-Bulgaria/source-file.html
@@ -101,44 +101,56 @@
 		<a href="https://en.wikipedia.org/wiki/Ottoman_Empire">Ottoman</a> rule for
 		nearly five centuries.
 	</p>
-	<p>The <a href="https://en.wikipedia.org/wiki/Russo-Turkish_War_(1877%E2%80%9378)" class="mw-redirect"
-			title="Russo-Turkish War (1877–78)">Russo-Turkish War of 1877–78</a> resulted in the formation of
+
+	<p>
+		The
+		<a href="https://en.wikipedia.org/wiki/Russo-Turkish_War_(1877%E2%80%9378)">Russo-Turkish War of 1877–78</a>
+		resulted in the formation of
 		the current Third Bulgarian State. Many ethnic Bulgarian populations were left outside its borders,
 		which led to several conflicts with its neighbours and an alliance with Germany in both world wars. In
-		1946 Bulgaria became a <a href="https://en.wikipedia.org/wiki/People%27s_Republic_of_Bulgaria"
-			title="People&#39;s Republic of Bulgaria">one-party socialist state</a> and part of the Soviet-led
-		<a href="https://en.wikipedia.org/wiki/Eastern_Bloc" title="Eastern Bloc">Eastern Bloc</a>. The ruling
-		<a href="https://en.wikipedia.org/wiki/Bulgarian_Communist_Party" title="Bulgarian Communist Party">Communist
-			Party</a> gave up its monopoly on power after the <a href="https://en.wikipedia.org/wiki/Revolutions_of_1989"
-			title="Revolutions of 1989">revolutions of
-			1989</a> and allowed <a href="https://en.wikipedia.org/wiki/Multi-party" class="mw-redirect"
-			title="Multi-party">multi-party</a> elections. Bulgaria then transitioned into a <a
-			href="https://en.wikipedia.org/wiki/Democracy" title="Democracy">democracy</a> and a market-based
+		1946 Bulgaria became a
+		<a href="https://en.wikipedia.org/wiki/People%27s_Republic_of_Bulgaria">one-party socialist state</a> and part of
+		the Soviet-led
+		<a href="https://en.wikipedia.org/wiki/Eastern_Bloc">Eastern Bloc</a>. The ruling
+		<a href="https://en.wikipedia.org/wiki/Bulgarian_Communist_Party">Communist
+			Party</a> gave up its monopoly on power after the
+		<a href="https://en.wikipedia.org/wiki/Revolutions_of_1989">revolutions of
+			1989</a> and allowed
+		<a href="https://en.wikipedia.org/wiki/Multi-party">multi-party</a> elections. Bulgaria then transitioned into a
+		<a href="https://en.wikipedia.org/wiki/Democracy">democracy</a> and a market-based
 		economy.
 	</p>
-	<p>Since adopting a democratic constitution in 1991, the <a href="https://en.wikipedia.org/wiki/Sovereign_state"
-			title="Sovereign state">sovereign state</a>
-		has been a <a href="https://en.wikipedia.org/wiki/Unitary_state" title="Unitary state">unitary</a> <a
-			href="https://en.wikipedia.org/wiki/Parliamentary_republic" title="Parliamentary republic">parliamentary
+	<p>
+		Since adopting a democratic constitution in 1991, the
+		<a href="https://en.wikipedia.org/wiki/Sovereign_state">sovereign state</a>
+		has been a
+		<a href="https://en.wikipedia.org/wiki/Unitary_state">unitary</a>
+		<a href="https://en.wikipedia.org/wiki/Parliamentary_republic">parliamentary
 			republic</a> with a high degree of political,
 		administrative, and economic centralisation. The population of seven million lives mainly in Sofia and
-		the capital cities of the <a href="https://en.wikipedia.org/wiki/Provinces_of_Bulgaria"
-			title="Provinces of Bulgaria">27 provinces</a>, and the country has suffered significant
+		the capital cities of the
+		<a href="https://en.wikipedia.org/wiki/Provinces_of_Bulgaria">27 provinces</a>, and the country has suffered
+		significant
 		demographic decline since the late 1980s.
 	</p>
-	<p>Bulgaria is a member of the <a href="https://en.wikipedia.org/wiki/European_Union" title="European Union">European
-			Union</a>, <a href="https://en.wikipedia.org/wiki/NATO" title="NATO">NATO</a>, and the <a
-			href="https://en.wikipedia.org/wiki/Council_of_Europe" title="Council of Europe">Council of Europe</a>; it is a
-		founding state of the <a href="https://en.wikipedia.org/wiki/Organization_for_Security_and_Co-operation_in_Europe"
-			title="Organization for Security and Co-operation in Europe">Organization for Security and
-			Co-operation in Europe</a> (OSCE) and has taken a seat on the <a
-			href="https://en.wikipedia.org/wiki/UN_Security_Council" class="mw-redirect" title="UN Security Council">UN
-			Security Council</a> three times. Its <a href="https://en.wikipedia.org/wiki/Market_economy"
-			title="Market economy">market economy</a> is
-		part of the <a href="https://en.wikipedia.org/wiki/European_Single_Market" title="European Single Market">European
+	<p>
+		Bulgaria is a member of the
+		<a href="https://en.wikipedia.org/wiki/European_Union">European
+			Union</a>,
+		<a href="https://en.wikipedia.org/wiki/NATO">NATO</a>, and the
+		<a href="https://en.wikipedia.org/wiki/Council_of_Europe">Council of Europe</a>; it is a
+		founding state of the
+		<a href="https://en.wikipedia.org/wiki/Organization_for_Security_and_Co-operation_in_Europe">Organization for
+			Security and
+			Co-operation in Europe</a> (OSCE) and has taken a seat on the
+		<a href="https://en.wikipedia.org/wiki/UN_Security_Council">UN
+			Security Council</a> three times. Its
+		<a href="https://en.wikipedia.org/wiki/Market_economy">market economy</a> is
+		part of the
+		<a href="https://en.wikipedia.org/wiki/European_Single_Market">European
 			Single Market</a> and mostly relies on services, followed
-		by industry—especially machine building and mining—and agriculture. <a
-			href="https://en.wikipedia.org/wiki/Corruption_in_Bulgaria" title="Corruption in Bulgaria">Widespread
+		by industry—especially machine building and mining—and agriculture.
+		<a href="https://en.wikipedia.org/wiki/Corruption_in_Bulgaria">Widespread
 			corruption</a> is a major socioeconomic issue.
 	</p>
 	<div id="toc" class="toc"><input type="checkbox" role="button" id="toctogglecheckbox" class="toctogglecheckbox"
