--- a/03. CSS & Typography/L3_04_Buttons-css/index.html
+++ b/03. CSS & Typography/L3_04_Buttons-css/index.html
@@ -14,7 +14,7 @@
    <div>
       <a href="#" class="button">Learn More</a>
       <button class="button">Learn More</button>
-      <button class="button">Learn More</button>
+      <button class="button hover">Learn More</button>
    </div>
 
 
@@ -23,7 +23,7 @@
    <div>
       <a href="#" class="fill button">Learn More</a>
       <button class="fill button">Learn More</button>
-      <button class="fill button">Learn More</button>
+      <button class="fill button hover">Learn More</button>
    </div>
 
 
@@ -34,7 +34,7 @@
          Download</a>
       <button class="fill button"><i class="fas fa-arrow-down"></i>
          Download</button>
-      <button class="fill button"><i class="fas fa-arrow-down"></i>
+      <button class="fill button hover"><i class="fas fa-arrow-down"></i>
          Download</button>
    </div>
 
